// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`functions test in online mode cron does nothing when no rotation matched 1`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`functions test in online mode cron posts matched rotations and updates members field of them 1`] = `
Array [
  Array [
    Array [
      Object {
        "blocks": Array [
          Object {
            "text": Object {
              "text": "rotation-1 message",
              "type": "mrkdwn",
              "verbatim": false,
            },
            "type": "section",
          },
          Object {
            "accessory": Object {
              "action_id": "overflow_menu",
              "options": Array [
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "編集",
                    "type": "plain_text",
                  },
                  "value": "edit:rotation-1",
                },
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "ひとつ進む",
                    "type": "plain_text",
                  },
                  "value": "rotate:rotation-1",
                },
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "ひとつ戻る",
                    "type": "plain_text",
                  },
                  "value": "unrotate:rotation-1",
                },
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "───────────────────",
                    "type": "plain_text",
                  },
                  "value": "noop:rotation-1",
                },
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "削除",
                    "type": "plain_text",
                  },
                  "value": "delete:rotation-1",
                },
              ],
              "type": "overflow",
            },
            "text": Object {
              "text": "👑 <@user-b|>→ <@user-c|>→<@user-a|>",
              "type": "mrkdwn",
              "verbatim": true,
            },
            "type": "section",
          },
        ],
        "channel": "channel-1",
        "text": "rotation-1 message",
        "unfurl_links": false,
      },
    ],
    Array [
      Object {
        "blocks": Array [
          Object {
            "text": Object {
              "text": "rotation-2 message",
              "type": "mrkdwn",
              "verbatim": false,
            },
            "type": "section",
          },
          Object {
            "accessory": Object {
              "action_id": "overflow_menu",
              "options": Array [
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "編集",
                    "type": "plain_text",
                  },
                  "value": "edit:rotation-2",
                },
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "ひとつ進む",
                    "type": "plain_text",
                  },
                  "value": "rotate:rotation-2",
                },
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "ひとつ戻る",
                    "type": "plain_text",
                  },
                  "value": "unrotate:rotation-2",
                },
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "───────────────────",
                    "type": "plain_text",
                  },
                  "value": "noop:rotation-2",
                },
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "削除",
                    "type": "plain_text",
                  },
                  "value": "delete:rotation-2",
                },
              ],
              "type": "overflow",
            },
            "text": Object {
              "text": "👑 <@user-q|>→<@user-p|>",
              "type": "mrkdwn",
              "verbatim": true,
            },
            "type": "section",
          },
        ],
        "channel": "channel-2",
        "text": "rotation-2 message",
        "unfurl_links": false,
      },
    ],
  ],
  Array [],
]
`;

exports[`functions test in online mode slack /rota command opens RotationModal 1`] = `
Array [
  Array [],
  Array [
    Array [
      Object {
        "trigger_id": "trigger-id",
        "view": Object {
          "blocks": Array [
            Object {
              "block_id": "members",
              "element": Object {
                "action_id": "members",
                "placeholder": Object {
                  "emoji": true,
                  "text": "ローテーションさせる順番で選択してください",
                  "type": "plain_text",
                },
                "type": "multi_users_select",
              },
              "label": Object {
                "emoji": true,
                "text": "メンバー",
                "type": "plain_text",
              },
              "optional": false,
              "type": "input",
            },
            Object {
              "block_id": "message",
              "element": Object {
                "action_id": "message",
                "multiline": true,
                "placeholder": Object {
                  "emoji": false,
                  "text": "お知らせする本文です。Slack の mrkdwn が使えます",
                  "type": "plain_text",
                },
                "type": "plain_text_input",
              },
              "label": Object {
                "emoji": true,
                "text": "メッセージ",
                "type": "plain_text",
              },
              "optional": false,
              "type": "input",
            },
            Object {
              "block_id": "days",
              "element": Object {
                "action_id": "days",
                "options": Array [
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "日曜",
                      "type": "plain_text",
                    },
                    "value": "0",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "月曜",
                      "type": "plain_text",
                    },
                    "value": "1",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "火曜",
                      "type": "plain_text",
                    },
                    "value": "2",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "水曜",
                      "type": "plain_text",
                    },
                    "value": "3",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "木曜",
                      "type": "plain_text",
                    },
                    "value": "4",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "金曜",
                      "type": "plain_text",
                    },
                    "value": "5",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "土曜",
                      "type": "plain_text",
                    },
                    "value": "6",
                  },
                ],
                "placeholder": Object {
                  "emoji": true,
                  "text": "複数選択可能です",
                  "type": "plain_text",
                },
                "type": "multi_static_select",
              },
              "label": Object {
                "emoji": true,
                "text": "曜日",
                "type": "plain_text",
              },
              "optional": false,
              "type": "input",
            },
            Object {
              "block_id": "hour",
              "element": Object {
                "action_id": "hour",
                "initial_option": Object {
                  "text": Object {
                    "emoji": true,
                    "text": "10時",
                    "type": "plain_text",
                  },
                  "value": "10",
                },
                "options": Array [
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "0時",
                      "type": "plain_text",
                    },
                    "value": "0",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "1時",
                      "type": "plain_text",
                    },
                    "value": "1",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "2時",
                      "type": "plain_text",
                    },
                    "value": "2",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "3時",
                      "type": "plain_text",
                    },
                    "value": "3",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "4時",
                      "type": "plain_text",
                    },
                    "value": "4",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "5時",
                      "type": "plain_text",
                    },
                    "value": "5",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "6時",
                      "type": "plain_text",
                    },
                    "value": "6",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "7時",
                      "type": "plain_text",
                    },
                    "value": "7",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "8時",
                      "type": "plain_text",
                    },
                    "value": "8",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "9時",
                      "type": "plain_text",
                    },
                    "value": "9",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "10時",
                      "type": "plain_text",
                    },
                    "value": "10",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "11時",
                      "type": "plain_text",
                    },
                    "value": "11",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "12時",
                      "type": "plain_text",
                    },
                    "value": "12",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "13時",
                      "type": "plain_text",
                    },
                    "value": "13",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "14時",
                      "type": "plain_text",
                    },
                    "value": "14",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "15時",
                      "type": "plain_text",
                    },
                    "value": "15",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "16時",
                      "type": "plain_text",
                    },
                    "value": "16",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "17時",
                      "type": "plain_text",
                    },
                    "value": "17",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "18時",
                      "type": "plain_text",
                    },
                    "value": "18",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "19時",
                      "type": "plain_text",
                    },
                    "value": "19",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "20時",
                      "type": "plain_text",
                    },
                    "value": "20",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "21時",
                      "type": "plain_text",
                    },
                    "value": "21",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "22時",
                      "type": "plain_text",
                    },
                    "value": "22",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "23時",
                      "type": "plain_text",
                    },
                    "value": "23",
                  },
                ],
                "type": "static_select",
              },
              "label": Object {
                "emoji": true,
                "text": "時",
                "type": "plain_text",
              },
              "optional": false,
              "type": "input",
            },
            Object {
              "block_id": "minute",
              "element": Object {
                "action_id": "minute",
                "initial_option": Object {
                  "text": Object {
                    "emoji": true,
                    "text": "0分",
                    "type": "plain_text",
                  },
                  "value": "0",
                },
                "options": Array [
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "0分",
                      "type": "plain_text",
                    },
                    "value": "0",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "5分",
                      "type": "plain_text",
                    },
                    "value": "5",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "10分",
                      "type": "plain_text",
                    },
                    "value": "10",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "15分",
                      "type": "plain_text",
                    },
                    "value": "15",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "20分",
                      "type": "plain_text",
                    },
                    "value": "20",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "25分",
                      "type": "plain_text",
                    },
                    "value": "25",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "30分",
                      "type": "plain_text",
                    },
                    "value": "30",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "35分",
                      "type": "plain_text",
                    },
                    "value": "35",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "40分",
                      "type": "plain_text",
                    },
                    "value": "40",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "45分",
                      "type": "plain_text",
                    },
                    "value": "45",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "50分",
                      "type": "plain_text",
                    },
                    "value": "50",
                  },
                  Object {
                    "text": Object {
                      "emoji": true,
                      "text": "55分",
                      "type": "plain_text",
                    },
                    "value": "55",
                  },
                ],
                "type": "static_select",
              },
              "label": Object {
                "emoji": true,
                "text": "分",
                "type": "plain_text",
              },
              "optional": false,
              "type": "input",
            },
            Object {
              "block_id": "mention_all",
              "element": Object {
                "action_id": "mention_all",
                "initial_option": Object {
                  "text": Object {
                    "text": "全員にメンションする",
                    "type": "mrkdwn",
                    "verbatim": true,
                  },
                  "value": "true",
                },
                "options": Array [
                  Object {
                    "text": Object {
                      "text": "全員にメンションする",
                      "type": "mrkdwn",
                      "verbatim": true,
                    },
                    "value": "true",
                  },
                  Object {
                    "text": Object {
                      "text": "担当者だけにメンションする",
                      "type": "mrkdwn",
                      "verbatim": true,
                    },
                    "value": "false",
                  },
                ],
                "type": "radio_buttons",
              },
              "label": Object {
                "emoji": true,
                "text": "メンション",
                "type": "plain_text",
              },
              "optional": false,
              "type": "input",
            },
          ],
          "callback_id": "submit_callback",
          "close": Object {
            "emoji": true,
            "text": "キャンセル",
            "type": "plain_text",
          },
          "private_metadata": "{\\"channel\\":\\"channel-id\\"}",
          "submit": Object {
            "emoji": true,
            "text": "作成する",
            "type": "plain_text",
          },
          "title": Object {
            "emoji": true,
            "text": "ローテーション作成",
            "type": "plain_text",
          },
          "type": "modal",
        },
      },
    ],
  ],
]
`;

exports[`functions test in online mode slack overflow menu actions delete deletes the selected rotation from Firestore and posts that 1`] = `
Array [
  Array [],
  Array [
    Array [
      Object {
        "channel": "channel-id",
        "reply_broadcast": true,
        "text": "<@user-id> さんがこのローテーションを削除しました 👋",
        "thread_ts": "1596814246.000200",
      },
    ],
  ],
]
`;

exports[`functions test in online mode slack overflow menu actions delete posts 'already deleted' as ephemeral if the rotation not exist 1`] = `
Array [
  Array [],
  Array [
    Array [
      Object {
        "channel": "channel-id",
        "text": "このローテーションは削除済みです",
        "user": "user-id",
      },
    ],
  ],
]
`;

exports[`functions test in online mode slack overflow menu actions rotate posts 'already deleted' as ephemeral if the rotation not exist 1`] = `
Array [
  Array [],
  Array [
    Array [
      Object {
        "channel": "channel-id",
        "text": "このローテーションは削除済みです",
        "user": "user-id",
      },
    ],
  ],
]
`;

exports[`functions test in online mode slack overflow menu actions rotate rotates the selected rotation and posts that 1`] = `
Array [
  Array [],
  Array [
    Array [
      Object {
        "blocks": Array [
          Object {
            "text": Object {
              "text": "rotation-1 message",
              "type": "mrkdwn",
              "verbatim": false,
            },
            "type": "section",
          },
          Object {
            "accessory": Object {
              "action_id": "overflow_menu",
              "options": Array [
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "編集",
                    "type": "plain_text",
                  },
                  "value": "edit:rotation-1",
                },
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "ひとつ進む",
                    "type": "plain_text",
                  },
                  "value": "rotate:rotation-1",
                },
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "ひとつ戻る",
                    "type": "plain_text",
                  },
                  "value": "unrotate:rotation-1",
                },
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "───────────────────",
                    "type": "plain_text",
                  },
                  "value": "noop:rotation-1",
                },
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "削除",
                    "type": "plain_text",
                  },
                  "value": "delete:rotation-1",
                },
              ],
              "type": "overflow",
            },
            "text": Object {
              "text": "👑 <@user-b|>→ <@user-c|>→<@user-a|>",
              "type": "mrkdwn",
              "verbatim": true,
            },
            "type": "section",
          },
        ],
        "channel": "channel-id",
        "text": "rotation-1 message",
        "ts": "1596814246.000200",
        "unfurl_links": false,
      },
    ],
  ],
]
`;

exports[`functions test in online mode slack overflow menu actions unrotate posts 'already deleted' as ephemeral if the rotation not exist 1`] = `
Array [
  Array [],
  Array [
    Array [
      Object {
        "channel": "channel-id",
        "text": "このローテーションは削除済みです",
        "user": "user-id",
      },
    ],
  ],
]
`;

exports[`functions test in online mode slack overflow menu actions unrotate unrotates the selected rotation and posts that 1`] = `
Array [
  Array [],
  Array [
    Array [
      Object {
        "blocks": Array [
          Object {
            "text": Object {
              "text": "rotation-1 message",
              "type": "mrkdwn",
              "verbatim": false,
            },
            "type": "section",
          },
          Object {
            "accessory": Object {
              "action_id": "overflow_menu",
              "options": Array [
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "編集",
                    "type": "plain_text",
                  },
                  "value": "edit:rotation-1",
                },
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "ひとつ進む",
                    "type": "plain_text",
                  },
                  "value": "rotate:rotation-1",
                },
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "ひとつ戻る",
                    "type": "plain_text",
                  },
                  "value": "unrotate:rotation-1",
                },
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "───────────────────",
                    "type": "plain_text",
                  },
                  "value": "noop:rotation-1",
                },
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "削除",
                    "type": "plain_text",
                  },
                  "value": "delete:rotation-1",
                },
              ],
              "type": "overflow",
            },
            "text": Object {
              "text": "👑 <@user-c|>→ <@user-a|>→<@user-b|>",
              "type": "mrkdwn",
              "verbatim": true,
            },
            "type": "section",
          },
        ],
        "channel": "channel-id",
        "text": "rotation-1 message",
        "ts": "1596814246.000200",
        "unfurl_links": false,
      },
    ],
  ],
]
`;

exports[`functions test in online mode slack submit from RotationModal creates a new rotation in Firestore and posts a SuccessMessage 1`] = `
Array [
  Array [],
  Array [
    Array [
      Object {
        "blocks": Array [
          Object {
            "text": Object {
              "text": "<@user-id|>さんがローテーションを作成しました！

月曜・水曜・金曜の 23:45 に 👇 のような感じでお知らせします",
              "type": "mrkdwn",
              "verbatim": true,
            },
            "type": "section",
          },
          Object {
            "text": Object {
              "text": "&gt; てすてす
&gt; 
&gt; *テスト*です",
              "type": "mrkdwn",
              "verbatim": false,
            },
            "type": "section",
          },
          Object {
            "accessory": Object {
              "action_id": "overflow_menu",
              "options": Array [
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "編集",
                    "type": "plain_text",
                  },
                  "value": "edit:1597200000000",
                },
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "───────────────────",
                    "type": "plain_text",
                  },
                  "value": "noop:1597200000000",
                },
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "削除",
                    "type": "plain_text",
                  },
                  "value": "delete:1597200000000",
                },
              ],
              "type": "overflow",
            },
            "text": Object {
              "text": "&gt; 👑 <@user-a|>→ <@user-b|>→<@user-c|>
&gt; ",
              "type": "mrkdwn",
              "verbatim": true,
            },
            "type": "section",
          },
        ],
        "channel": "channel-id",
        "text": "<@user-id> さんがローテーションを作成しました！",
        "unfurl_links": false,
      },
    ],
  ],
]
`;

exports[`functions test in online mode slack submit from RotationModal updates a existing rotation in Firestore and posts a SuccessMessage 1`] = `
Array [
  Array [],
  Array [
    Array [
      Object {
        "blocks": Array [
          Object {
            "text": Object {
              "text": "<@user-id|>さんがローテーションを編集しました！

月曜・水曜・金曜の 23:45 に 👇 のような感じでお知らせします",
              "type": "mrkdwn",
              "verbatim": true,
            },
            "type": "section",
          },
          Object {
            "text": Object {
              "text": "&gt; てすてす
&gt; 
&gt; *テスト*です",
              "type": "mrkdwn",
              "verbatim": false,
            },
            "type": "section",
          },
          Object {
            "accessory": Object {
              "action_id": "overflow_menu",
              "options": Array [
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "編集",
                    "type": "plain_text",
                  },
                  "value": "edit:rotation-4",
                },
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "───────────────────",
                    "type": "plain_text",
                  },
                  "value": "noop:rotation-4",
                },
                Object {
                  "text": Object {
                    "emoji": true,
                    "text": "削除",
                    "type": "plain_text",
                  },
                  "value": "delete:rotation-4",
                },
              ],
              "type": "overflow",
            },
            "text": Object {
              "text": "&gt; 👑 <@user-a|>→ <@user-b|>→<@user-c|>
&gt; ",
              "type": "mrkdwn",
              "verbatim": true,
            },
            "type": "section",
          },
        ],
        "channel": "channel-id",
        "text": "<@user-id> さんがローテーションを編集しました！",
        "unfurl_links": false,
      },
    ],
  ],
]
`;
